--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -6,6 +6,10 @@ body,
   margin: 0;
   padding: 0;
 }
+* {
+  margin: 0;
+  padding: 0;
+}
 .el-breadcrumb {
   margin-bottom: 15px;
   font-size: 13px;
