--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -10,6 +10,9 @@ body,
   margin: 0;
   padding: 0;
 }
+.el-container {
+  display: -webkit-box;
+}
 .el-breadcrumb {
   margin-bottom: 15px;
   font-size: 13px;
